--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,5 @@ dependencies = [
 ]
 requires-python = ">=3.11"
 
-[build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+[tool.setuptools]
+py-modules = ["run_vox", "vox_bridge"]
