--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "voxcpmane-wyoming"
 version = "0.2.0"
 description = "Wyoming protocol bridge for VoxCPMANE on Apple Silicon"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11*"
 dependencies = [
   "voxcpmane",
   "wyoming>=1.5.0",
